[package]
name = "mjtools"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
counter = "0.5.2"
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
phf = { version = "0.10.1", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.10.0"
